# math-audio

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  Justfile  README.md  rust-toolchain.toml
math-bem/: .gitignore  Cargo.toml  README.md  TESTING.md  build.rs
math-bem/configs/: example_lshaped_fmm.json  example_multi_source.json  example_rectangular.json  home_theater_2_0.json  home_theater_2_1.json  home_theater_5_1_4.json  lshaped_stereo.json  nearfield_stereo.json  nearfield_stereo_vis.json
math-bem/examples/: adaptive_beta_sweep.rs  analytical_check.rs  angular_validation.rs  audio_fmm_sweep.rs  audio_frequency_sweep.rs  bem_convergence_study.rs  bem_diagnostics.rs  beta_comparison.rs  bounded_beta_test.rs  convergence_test.rs  e_integral_debug.rs  e_nearby_analysis.rs  e_offdiag_sum.rs  fmm_benchmark.rs  fmm_ilu_solver.rs  fmm_test.rs  fmm_validation.rs  high_order_quad_test.rs  hypersingular_test.rs  incident_field_check.rs  integration_test.rs  matrix_debug.rs  mesh_comparison.rs  mesh_convergence_study.rs  mesh_debug.rs  mesh_refinement_test.rs  mesh_topology_comparison.rs  neighbor_integration_test.rs  normal_check.rs  optimal_beta_convergence.rs  residual_check.rs  room_simulator_config.rs  room_simulator_demo.rs  row_sum_correction_test.rs  row_sum_debug.rs  simple_sphere_test.rs
math-bem/plotting/: index.html  plot_1d.html  plot_2d.html  plot_3d.html  room_simulator.html
math-bem/plotting/common/: plots.js  styles.css
math-bem/src/: lib.rs  room_acoustics.rs
math-bem/src/core/: bem_solver.rs  constants.rs  incident.rs  mod.rs  parallel.rs  types.rs
math-bem/src/room_acoustics/: config.rs  solver.rs
math-bem/src/testing/: json_output.rs  mod.rs  validation.rs
math-bem/tests/: test_1d_wave.rs  test_2d_cylinder.rs  test_3d_sphere.rs  test_accuracy_parity.rs  test_bem_sphere_integration.rs  test_fmm_validation.rs
math-convex-hull/: .gitignore  Cargo.toml  README.md
math-convex-hull/src/: export.rs  geometry.rs  lib.rs  quickhull.rs  testdata.rs  types.rs
math-convex-hull/tests/: integration_tests.rs
math-differential-evolution/: Cargo.toml  README.md  REFERENCES.md
math-differential-evolution/bench/: benchmark_convergence.rs
math-differential-evolution/examples/: optde_adaptive_demo.rs  optde_basic.rs  optde_linear_constraints.rs  optde_nonlinear_constraints.rs  optde_parallel.rs
math-differential-evolution/src/: apply_integrality.rs  apply_wls.rs  argmin.rs  crossover_binomial.rs  crossover_exponential.rs  de_tests.rs  differential_evolution.rs  distinct_indices.rs  error.rs  function_registry.rs  impl_helpers.rs  init_latin_hypercube.rs  init_random.rs  metadata.rs  mod.rs  mutant_adaptive.rs  mutant_best1.rs  mutant_best2.rs  mutant_current_to_best1.rs  mutant_rand1.rs  mutant_rand2.rs  mutant_rand_to_best1.rs  parallel_eval.rs  recorder.rs  run_recorded.rs  stack_linear_penalty.rs
math-fem/: Cargo.toml  README.md
math-fem/benches/: helmholtz_3d_scaling.rs
math-fem/configs/: stereo_2_1_directivity_example.json  stereo_2_1_example.json
math-fem/docs/: room_config_schema.json  room_simulator.md
math-fem/examples/: scaling_3d.rs
math-fem/src/: lib.rs
math-fem/src/assembly/: assembler.rs  helmholtz.rs  mass.rs  mod.rs  stiffness.rs
math-fem/src/basis/: lagrange.rs  mod.rs  shape.rs
math-fem/src/boundary/: dirichlet.rs  mod.rs  neumann.rs  pml.rs  robin.rs
math-fem/src/mesh/: generators.rs  mod.rs  refinement.rs  types.rs
math-fem/src/multigrid/: cycle.rs  hierarchy.rs  mod.rs  smoother.rs  transfer.rs
math-fem/src/quadrature/: gauss.rs  mod.rs  rules.rs
math-fem/src/solver/: mod.rs
math-fem/tests/: analytical_validation.rs
math-iir-fir/: Cargo.toml  README.md
math-iir-fir/benches/: biquad_bench.rs
math-iir-fir/examples/: fir_example.rs  format_demo.rs  format_rme_room_demo.rs  peq_loudness_compensation.rs  readme_example.rs
math-iir-fir/src/: denormals.rs  error.rs  fir.rs  iir.rs  mod.rs
math-solvers/: Cargo.toml
math-solvers/src/: blas_helpers.rs  lib.rs  parallel.rs  traits.rs
math-solvers/src/direct/: lu.rs  mod.rs
math-solvers/src/iterative/: bicgstab.rs  cg.rs  cgs.rs  gmres.rs  gmres_pipelined.rs  mod.rs
math-solvers/src/preconditioners/: amg.rs  diagonal.rs  ilu.rs  ilu_parallel.rs  mod.rs  schwarz.rs
math-solvers/src/sparse/: csr.rs  mod.rs
math-test-functions/: .gitignore  Cargo.toml  README.md  REFERENCES.md
math-test-functions/docs/: ackley.json  ackley_n2.json  ackley_n3.json  alpine_n1.json  alpine_n2.json  beale.json  bent_cigar.json  bent_cigar_alt.json  binh_korn_constraint1.json  binh_korn_constraint2.json  binh_korn_weighted.json  bird.json  bohachevsky1.json  bohachevsky2.json  bohachevsky3.json  booth.json  branin.json  brown.json  bukin_n6.json  chung_reynolds.json  cigar.json  cosine_mixture.json  cross_in_tray.json  de_jong_step2.json  dejong_f5_foxholes.json  different_powers.json  discus.json  dixons_price.json  drop_wave.json  easom.json  eggholder.json  elliptic.json  epistatic_michalewicz.json  expanded_griewank_rosenbrock.json  exponential.json  forrester_2008.json  freudenstein_roth.json  goldstein_price.json  gramacy_lee_2012.json  gramacy_lee_function.json  (+59 more)
math-test-functions/examples/: find_hartman_4d_min.rs  test_additional_functions.rs  test_gramacy_lee.rs  test_hartman_4d.rs  test_new_sfu_functions.rs
math-test-functions/src/: lib.rs
math-test-functions/src/functions/: ackley.rs  ackley_n2.rs  ackley_n3.rs  alpine_n1.rs  alpine_n2.rs  beale.rs  bent_cigar.rs  bent_cigar_alt.rs  binh_korn_constraint1.rs  binh_korn_constraint2.rs  binh_korn_weighted.rs  bird.rs  bohachevsky1.rs  bohachevsky2.rs  bohachevsky3.rs  booth.rs  branin.rs  brown.rs  bukin_n6.rs  chung_reynolds.rs  cigar.rs  colville.rs  cosine_mixture.rs  cross_in_tray.rs  de_jong_step2.rs  dejong_f5_foxholes.rs  different_powers.rs  discus.rs  dixons_price.rs  drop_wave.rs  easom.rs  eggholder.rs  elliptic.rs  (+73 more)
math-wave/: Cargo.toml  README.md
math-wave/src/: lib.rs
math-xem-common/: Cargo.toml
math-xem-common/src/: config.rs  geometry.rs  lib.rs  output.rs  source.rs  types.rs
(+35 files in other folders)
