[workspace]
members = [
    "math-bem",
    "math-fem",
    "math-iir-fir",
    "math-solvers",
    "math-test-functions",
    "math-convex-hull",
    "math-differential-evolution",
    "math-wave",
    "math-xem-common",
]
resolver = "3"

[workspace.package]
version = "0.2.34"
authors = ["Pierre F. Aubert pierre@spinorama.org"]
description = "Toolkit for audio modelisation"
edition = "2024"
documentation = "https://docs.rs/math-audio"
license = "GPL-3.0-or-later"
repository = "https://github.com/pierreaubert/math-audio"

[workspace.dependencies]

# Serialization and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async and networking
# ideally we would use only threads or only tokio
anyhow = { version = "1.0" }

# CLI and system
base64 = "0.22"
byteorder = "1.5"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
directories = "5"
env_logger = "0.11"
log = "0.4"
memory-stats = "1.2"
num_cpus = "1.17"
sysinfo = "0.37"
thiserror = "2.0.17"
criterion = "0.5"

# Optimization and math
ndarray = { version = "0.17", default-features = false, features = ["rayon", "blas", "serde"] }
ndarray-linalg = { version = "0.18" }
rand = "0.9.2"
num-complex = "0.4"
num-traits = "0.2"
rayon = "1.11"
nlopt = "0.8.1"
spec_math = "0.1.6"
math-test-functions = { path = "math-test-functions", version = "0.2", default-features = false }
math-solvers = { path = "math-solvers", version = "0.2", default-features = false }
math-wave = { path = "math-wave", version = "0.2" }
math-xem-common = { path = "math-xem-common", version = "0.2" }

# Plotting and visualization
plotly = { version = "0.13.5" }
plotly_static = { version = "0.1" }

# Web/WASM
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.2"

# Utilities
approx = "0.5"
toml = "0.8"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }  # optional, might cause more false positives

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"

[patch.crates-io]
webdriver-downloader = { version = "0.16.4", git = "https://github.com/pierreaubert/webdriver-downloader" }

[profile.release]
lto = true
codegen-units = 1

