[package]
name = "math-convex-hull"
version = "0.2.7"
authors.workspace = true
description = "3D Convex Hull and Computational Geometry library"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
log = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
directories = { workspace = true }

