[package]
name = "math-fem"
version = "0.2.5"
description = "Multigrid FEM solver for the Helmholtz equation"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = ["fem", "finite-element", "helmholtz", "multigrid", "acoustics"]
categories = ["science", "mathematics", "simulation"]

[lib]
name = "fem"
path = "src/lib.rs"

[[bin]]
name = "roomsim-fem"
path = "bin/room_simulator_fem.rs"
required-features = ["cli", "native"]

[dependencies]
# Common types shared with BEM
math-xem-common = { workspace = true }

# Solver infrastructure
math-solvers = { workspace = true }
math-wave = { workspace = true }
spec_math = { workspace = true }

# Core numerical computing
ndarray = { workspace = true }
num-complex = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }

# Parallel processing
rayon = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true, optional = true }

# CLI
clap = { workspace = true, optional = true }

# Serialization (for JSON output)
serde_json = { workspace = true }

# Time/date for metadata
chrono = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

[[bin]]
name = "qa-suite"
path = "bin/qa_suite.rs"
required-features = ["cli", "native"]

[[bench]]
name = "helmholtz_3d_scaling"
harness = false

[features]
default = ["native"]

# Native feature: enables rayon parallelism
native = ["math-solvers/native", "parallel", "env_logger"]

# CLI requires native features
cli = ["native", "clap"]

# Parallel processing
parallel = ["rayon"]
