[package]
name = "math-iir-fir"
version = "0.2.21"
description = "AutoEQ IIR and FIR filters"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }

[lib]
name = "autoeq_iir"
path = "src/mod.rs"

