[package]
name = "math-iir-fir"
version = "0.3.0"
description = "Math-Audio IIR and FIR filters"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }

[lib]
name = "math_audio_iir_fir"
path = "src/mod.rs"

