[package]
name = "math-iir-fir"
version = "0.3.1"
description = "Math-Audio IIR and FIR filters"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "biquad_bench"
harness = false

[lib]
name = "math_audio_iir_fir"
path = "src/mod.rs"

