[package]
name = "math-solvers"
version = "0.2.5"
description = "High-performance linear solvers for BEM and FEM"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = ["linear-algebra", "solvers", "gmres", "preconditionner"]
categories = ["science", "mathematics"]

[lib]
name = "solvers"
path = "src/lib.rs"

[dependencies]
# Core numerical computing
ndarray = { workspace = true }
num-complex = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }

# BLAS/LAPACK (native only)
ndarray-linalg = { workspace = true, optional = true }

# Parallel processing
rayon = { workspace = true, optional = true }

# WASM-specific dependencies
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-rayon = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }

[features]
default = ["native"]

# Native feature: enables BLAS/LAPACK and rayon
native = [
    "ndarray/blas",
    "ndarray/rayon",
    "ndarray-linalg",
    "rayon",
]

# Parallel processing (works with both native and wasm)
parallel = ["rayon"]

# WASM feature: enables parallel processing via wasm-bindgen-rayon
wasm = [
    "rayon",
    "wasm-bindgen",
    "wasm-bindgen-rayon",
]
