[package]
name = "math-test-functions"
version = "0.2.38"
description = "A collection of non linear functions for testing optimisation algorithms"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true}
serde_json = { workspace = true}
regex = { workspace = true}
plotly = { workspace = true}
directories = { workspace = true}
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"], optional = true }

[features]
default = []
plotly_static = ["dep:plotly_static"]

[lib]
name = "autoeq_testfunctions"
path = "src/lib.rs"

[[bin]]
name = "plot-functions"
path = "bin/plot_functions.rs"
