[package]
name = "math-wave"
version = "0.3.0"
edition = { workspace = true }
authors = { workspace = true }
description = "Analytical solutions for wave and Helmholtz equations"
license = { workspace = true }
repository = { workspace = true }
keywords = ["wave", "helmholtz", "acoustics", "analytical", "bessel"]
categories = ["science", "mathematics"]

[lib]
name = "math_audio_wave"
path = "src/lib.rs"

[dependencies]
num-complex = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
spec_math = { workspace = true }

[dev-dependencies]
approx = "0.5"
