[package]
name = "math-xem-common"
version = "0.1.1"
description = "Common types and utilities for BEM/FEM room acoustics simulators"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = ["bem", "fem", "acoustics", "room-acoustics", "simulation"]
categories = ["science", "mathematics", "simulation"]

[lib]
name = "xem_common"
path = "src/lib.rs"

[dependencies]
# Core numerical computing
ndarray = { workspace = true, features = ["serde"] }
num-complex = { workspace = true, features = ["serde"] }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time/date for metadata
chrono = { workspace = true }

# CLI (optional)
clap = { workspace = true, optional = true }

# Logging
log = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[features]
default = []
cli = ["clap"]
