[package]
name = "math-xem-common"
version = "0.3.0"
description = "Common types and utilities for BEM/FEM room acoustics simulators"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = ["bem", "fem", "acoustics", "room-acoustics", "simulation"]
categories = ["science", "mathematics", "simulation"]

[lib]
name = "math_audio_xem_common"
path = "src/lib.rs"

[dependencies]
# Core numerical computing
ndarray = { workspace = true, features = ["serde"] }
num-complex = { workspace = true, features = ["serde"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time/date for metadata
chrono = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
